--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -53,7 +53,7 @@
 
 .mw-content {
   flex: 1;
-  padding-top: spacing('8');
+  padding-top: spacing('7');
 }
 
 .mw-content-centered {
